tests/ui/reborrow/coerce_shared_lifetime_mismatch.stderr
error: implementing `CoerceShared` requires corresponding fields to match, be reborrowable with `CoerceShared`, or coerce a mutable reference field to a shared reference field
  --> $DIR/coerce_shared_lifetime_mismatch.rs:13:5
   |
LL |     data: &'static mut (),
   |     --------------------- source field `data` has type `&'static mut ()`
...
LL |     data: &'a (),
   |     ^^^^^^^^^^^^ target field `data` has type `&'a ()`

error: aborting due to 1 previous error

